--- a/index.html
+++ b/index.html
@@ -190,6 +190,21 @@ th{background:#eef2ff;padding:12px;text-align:left}
 td{padding:12px;border-bottom:1px solid #eee}
 
 footer{text-align:center;color:var(--muted);padding:15px}
+.credit-cell {
+  color: #16a34a; /* green */
+  font-weight: 600;
+}
+
+.debit-cell {
+  color: #dc2626; /* red */
+  font-weight: 600;
+}
+
+.table-row-highlight:hover {
+  background: #f3f4f6;
+  transition: 0.2s;
+}
+
 </style>
 </head>
 
@@ -480,37 +495,58 @@ function weeklyWise(){
 }
 
 /* MERCHANT TABLE */
-function merchantWise(){
-  merchantTable.innerHTML='<tr><th>Date</th><th>Merchant</th><th>Amount</th></tr>';
+function merchantWise() {
+  merchantTable.innerHTML = `
+    <tr>
+      <th>Date</th>
+      <th>Merchant</th>
+      <th>Credit</th>
+      <th>Debit</th>
+    </tr>
+  `;
 
   const rows = [];
 
-  filteredData.forEach(r=>{
-    const d=parseDate(getValue(r,"date"));
-    const merchant=getValue(r,"merchant name");
-    const amt=+getValue(r,"debit")||0;
+  filteredData.forEach(r => {
+    const d = parseDate(getValue(r, "date"));
+    const merchant = getValue(r, "merchant name");
+    const credit = +getValue(r, "credit") || 0;
+    const debit = +getValue(r, "debit") || 0;
 
-    if(merchant && amt>0){
-      rows.push({
-        date:d,
-        dateLabel:d.toLocaleDateString("en-GB",{day:"2-digit",month:"short",year:"numeric"}),
-        merchant,
-        amt
-      });
-    }
+    rows.push({
+      date: d,
+      dateLabel: d.toLocaleDateString("en-GB", {
+        day: "2-digit",
+        month: "short",
+        year: "numeric"
+      }),
+      merchant,
+      credit,
+      debit
+    });
   });
 
-  rows.sort((a,b)=>a.date - b.date);
+  rows.sort((a, b) => a.date - b.date);
 
-  rows.forEach(row=>{
-    merchantTable.innerHTML+=`
-      <tr>
+  rows.forEach(row => {
+    merchantTable.innerHTML += `
+      <tr class="table-row-highlight">
         <td>${row.dateLabel}</td>
-        <td>${row.merchant}</td>
-        <td>₹${formatNumber(row.amt)}</td>
-      </tr>`;
+        <td>${row.merchant || "-"}</td>
+
+        <td class="${row.credit > 0 ? "credit-cell" : ""}">
+            ${row.credit > 0 ? "₹" + formatNumber(row.credit) : "-"}
+        </td>
+
+        <td class="${row.debit > 0 ? "debit-cell" : ""}">
+            ${row.debit > 0 ? "₹" + formatNumber(row.debit) : "-"}
+        </td>
+      </tr>
+    `;
   });
 }
+
+
 function generateAIInsight() {
   const insightBox = document.getElementById("aiInsight");
   insightBox.style.display = "none";
