--- a/index.html
+++ b/index.html
@@ -223,9 +223,93 @@ footer{text-align:center;color:var(--muted);padding:15px}
   z-index:2000;
 }
 #filterLoader.show{display:flex;}
+/* Smooth fade + slide animation */
+@keyframes fadeSlideUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+/* Spinner for Excel loading + Filter loading */
+#filterLoader .loader {
+  width: 55px;
+  height: 55px;
+  border: 6px solid #dcdcff;
+  border-top-color: #4f46e5;
+  border-radius: 50%;
+  animation: spin 0.75s linear infinite;
+}
+#filterLoader {
+  background: rgba(255, 255, 255, 0.85);
+  backdrop-filter: blur(6px);
+}
+
+/* Apply to major UI blocks */
+.section,
+.summary .card,
+.controls,
+header,
+table tr {
+  animation: fadeSlideUp 0.6s ease;
+}
+.card, .section {
+  transition: transform 0.25s ease, box-shadow 0.25s ease;
+}
+
+.card:hover, .section:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 18px 40px rgba(0,0,0,0.12);
+}
+/* Fullscreen loader */
+#pageLoader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(6px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 5000;
+}
+
+/* Spinner animation */
+.spinner {
+  width: 55px;
+  height: 55px;
+  border: 6px solid #e0e0ff;
+  border-top-color: #4f46e5;
+  border-radius: 50%;
+  animation: spin 0.75s linear infinite;
+}
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* Smooth fade-out of loader */
+#pageLoader.fade-out {
+  opacity: 0;
+  transition: opacity 0.5s ease;
+  pointer-events: none;
+}
+
+
 </style>
 </head>
 <body>
+<body>
+<div id="pageLoader">
+  <div class="spinner"></div>
+</div>
 
 <header>
   <div>📊 Expense & Savings Dashboard</div>
@@ -717,6 +801,16 @@ function escapeHtml(text){
   document.getElementById("monthChart").style.height = "400px";
   document.getElementById("weeklyChart").style.height = "400px";
 })();
+window.addEventListener("load", () => {
+  const loader = document.getElementById("pageLoader");
+
+  loader.classList.add("fade-out");
+
+  setTimeout(() => {
+    loader.style.display = "none";
+  }, 500); // match fade-out time
+});
+
 </script>
 
 </body>
