--- a/index.html
+++ b/index.html
@@ -199,6 +199,10 @@ td{padding:12px;border-bottom:1px solid #eee}
 .table-row-highlight:hover{
   background:#f3f4f6; transition:0.2s;
 }
+.month-row-hover:hover {
+  background: #f3f4f6;
+  transition: 0.25s ease;
+}
 
 .credit-cell { color:#16a34a;font-weight:600; }
 .debit-cell { color:#dc2626;font-weight:600; }
@@ -264,6 +268,12 @@ table tr {
   transform: translateY(-6px);
   box-shadow: 0 18px 40px rgba(0,0,0,0.12);
 }
+/* Month table hover highlight */
+#monthTable tr:hover {
+  background: #f3f4f6;
+  transition: 0.25s ease;
+}
+
 /* Fullscreen loader */
 #pageLoader {
   position: fixed;
@@ -635,19 +645,31 @@ function monthWise(){
       const s = v.c - v.d;
       const lab = v.date.toLocaleString("en",{month:"short", year:"numeric"});
 
-monthTable.innerHTML += `
-  <tr>
+ const arrow = s >= 0 
+  ? `<svg width="20" height="20" stroke="#16a34a" stroke-width="2.5" fill="none" viewBox="0 0 24 24">
+       <path d="M12 19V5"/><path d="M5 12l7-7 7 7"/>
+     </svg>`
+  : `<svg width="20" height="20" stroke="#dc2626" stroke-width="2.5" fill="none" viewBox="0 0 24 24">
+       <path d="M12 5v14"/><path d="M19 12l-7 7-7-7"/>
+     </svg>`;
+
+ monthTable.innerHTML += `
+  <tr class="month-row-hover">
     <td>${lab}</td>
+
     <td class="${v.c > 0 ? "credit-cell" : ""}">
       ${v.c > 0 ? "₹" + formatNumber(v.c) : "-"}
     </td>
+
     <td class="${v.d > 0 ? "debit-cell" : ""}">
       ${v.d > 0 ? "₹" + formatNumber(v.d) : "-"}
     </td>
+
     <td class="${s >= 0 ? "credit-cell" : "debit-cell"}">
-      ₹${formatNumber(s)}
+      ₹${formatNumber(s)} &nbsp; ${arrow}
     </td>
   </tr>`;
+
 
 
       labels.push(lab);
