--- a/index.html
+++ b/index.html
@@ -713,6 +713,14 @@ function weeklyWise() {
 
   if (weeklyChart) weeklyChart.destroy();
 
+  const pointColors = [
+    "#4F46E5",  // Week 1
+    "#8B5CF6",  // Week 2
+    "#10B981",  // Week 3
+    "#F59E0B",  // Week 4
+    "#EF4444"   // Week 5
+  ];
+
   weeklyChart = new Chart(document.getElementById("weeklyChart"), {
     type: "line",
     data: {
@@ -721,9 +729,36 @@ function weeklyWise() {
         label: "Average Weekly Spending",
         data: weekAverages,
         borderWidth: 3,
-        tension: 0.35
+        tension: 0.35,
+        pointRadius: 6,
+        pointHoverRadius: 10,   // Larger on hover
+        pointHoverBackgroundColor: pointColors,
+        pointBackgroundColor: pointColors,
+        
+        // Glow effect on hover
+        pointHoverBorderWidth: 15,
+        pointHoverBorderColor: function(ctx) {
+          return ctx.dataset.pointBackgroundColor[ctx.dataIndex] + "40";
+        },
+
+        fill: true, // Enable area gradient
+        backgroundColor: function(context) {
+          const chart = context.chart;
+          const { ctx, chartArea } = chart;
+          if (!chartArea) return null;
+
+          const gradient = ctx.createLinearGradient(0, chartArea.top, 0, chartArea.bottom);
+          gradient.addColorStop(0, "rgba(79, 70, 229, 0.35)");
+          gradient.addColorStop(1, "rgba(79, 70, 229, 0.0)");
+          return gradient;
+        },
+
+        segment: {
+          borderColor: ctx => pointColors[ctx.p0DataIndex]
+        }
       }]
     },
+
     options: {
       responsive: true,
       maintainAspectRatio: false,
@@ -746,11 +781,23 @@ function weeklyWise() {
             }
           }
         }
+      },
+
+      // Apply gradient line after draw
+      animation: {
+        onComplete: () => {
+          const chart = weeklyChart;
+          const ctx = chart.ctx;
+          const gradient = ctx.createLinearGradient(0, 0, 0, 400);
+          gradient.addColorStop(0, "rgba(79, 70, 229, 1)");
+          gradient.addColorStop(1, "rgba(79, 70, 229, 0.1)");
+          chart.data.datasets[0].borderColor = gradient;
+          chart.update();
+        }
       }
     }
   });
 }
-
 
 
 /* --- Merchant table --- */
